一点点修改

--- a/1.ＨTML/4.表格.html
+++ b/1.ＨTML/4.表格.html
@@ -138,7 +138,7 @@
 </table>
 <!--9.用align属性排列单元格内容-->
 <h3>用align属性排列单元格内容</h3>
-<table border="1" cellpadding="10">
+<table border="1" cellpadding="10" cellspacing="0">
     <tr>
         <th align="left">姓名</th>
         <th align="center">身高</th>
