--- a/2.PC端CSS/11.CSS边框属性.html
+++ b/2.PC端CSS/11.CSS边框属性.html
@@ -7,6 +7,8 @@
     <title>CSS边框属性</title>
 </head>
 <style>
+    /* border简写属性：border-width/border-style/border-color
+    border-style 默认值是none，必须要设置才能看到边框 */
     /* border-collapse:collapse 合并相邻的边框，防止边框间重叠导致双倍像素显示*/
     p.one {
        border-style: solid;
