--- a/2.PC端CSS/12.CSS轮廓属性.html
+++ b/2.PC端CSS/12.CSS轮廓属性.html
@@ -16,6 +16,7 @@
         outline-style: dotted;
         outline-width: 4px;
         outline-color: lightblue;
+        /* outline-offset用于设置 outline 与一个元素边缘或边框之间的间隙 */
         outline-offset: 20px;
     }
 </style>
