--- a/2.PC端CSS/17CSS列表.html
+++ b/2.PC端CSS/17CSS列表.html
@@ -13,6 +13,7 @@
     列表还拥有默认的外边距和内边距,要删除把margin和padding属性设为0-->
 <style>
     .a{
+        background-color: yellow;
         list-style-type: circle;
         list-style-position: inside;
     }
@@ -22,7 +23,8 @@
     /*设置列表的颜色*/
     .c{
         background-color: lightcoral;
-        padding: 20px;
+        margin: 0;
+        padding: 0px;
     }
     .c li{
         background-color: aqua;
