--- a/2.PC端CSS/20CSS定位.html
+++ b/2.PC端CSS/20CSS定位.html
@@ -23,7 +23,7 @@
     .father{
         background-color: lightblue;
         padding: 30px;
-        /* position: relative; */
+        position: relative;
     }
     .child1,.child2,.child3{
         border: 1px solid black;
