--- a/2.PC端CSS/25CSS对齐.html
+++ b/2.PC端CSS/25CSS对齐.html
@@ -23,8 +23,9 @@
         /*图像居中:(1)将图像设置为块元素(2)左右外边距设置为auto*/
         img{
             display: block;
-            margin-left: auto;
-            margin-right: auto;
+            margin:auto;
+            /* margin-left: auto;
+            margin-right: auto; */
             width: 50px;
         }
         /*左右对齐:使用position属性absolute
@@ -41,8 +42,9 @@
           或者是line-height属性*/
         .div3{
             border:1px solid red;
-            width:200px;
+            width:100px;
             /* padding: 20px 0; */
+            height: 200px;
             line-height: 200px;
         }
     </style>
