--- a/2.PC端CSS/32CSS表单.html
+++ b/2.PC端CSS/32CSS表单.html
@@ -73,8 +73,8 @@
     表单用于向服务器传输数据。-->
     <form>
         <select name="Country">
-            <option value="au">Australia</option>
-            <option value="ca" >Canada</option>
+            <option value="au" >Australia</option>
+            <option value="ca" selected="selected">Canada</option>
             <option value="usa">USA</option>
         </select>
     </form>
