--- a/2.PC端CSS/37CSS渐变背景.html
+++ b/2.PC端CSS/37CSS渐变背景.html
@@ -28,7 +28,7 @@
         height: 200px;
     }
     #div3{
-        background: repeating-linear-gradient(lightblue 10%,yellow 20%);
+        background: repeating-linear-gradient(to right,lightblue 10%,yellow 20%);
         height: 200px;
     }
     #div4{
