--- a/2.PC端CSS/38CSS阴影.html
+++ b/2.PC端CSS/38CSS阴影.html
@@ -34,7 +34,7 @@ inset将外部阴影（outset）改为内部阴影-->
     .out{
         text-align: center;
         width: 200px;
-        box-shadow:2px 2px 4px gainsboro, 2px 2px 8px gainsboro;
+        box-shadow:20px 2px 4px gainsboro ;
     }
     .out .up{
         box-sizing: border-box;
