--- a/2.PC端CSS/21CSS溢出.html
+++ b/2.PC端CSS/21CSS溢出.html
@@ -17,7 +17,7 @@
         border:1px dotted black;
         width: 200px;
         height: 50px;
-        overflow: visible;
+        overflow: auto;
     }
 </style>
 <body>
