--- a/2.PC端CSS/24CSS浮动创建一个网站.html
+++ b/2.PC端CSS/24CSS浮动创建一个网站.html
@@ -24,10 +24,11 @@
     }
     .header li {
         float: left;
+        text-align: center;
     }
     .header li a {
         display: inline-block;
-        text-align: center;
+        /* text-align: center; */
         color: black;
         padding: 15px;
         text-decoration: none;
