--- a/2.PC端CSS/44CSS图像样式.html
+++ b/2.PC端CSS/44CSS图像样式.html
@@ -48,6 +48,7 @@
         overflow: hidden;
         /* opacity: 0; */
         transition: 0.5s ease;
+        /* transition-property默认是all */
     }
     .div2 .div3 .text{
         color: black;
