--- a/2.PC端CSS/56.CSS三角强化.html
+++ b/2.PC端CSS/56.CSS三角强化.html
@@ -11,9 +11,9 @@
         width: 0;
         height: 0;
         /* border-top:200px solid red; */
-        border-top:200px solid transparent;
-        /* border-left:100px solid pink; */
-        /* border-bottom:100px solid blue; */
+        border-top:100px solid transparent;
+        /* border-left:100px solid pink;
+        border-bottom:100px solid blue; */
         border-right:100px solid green;
     }
 </style>
