--- a/1.ＨTML/4.表格.html
+++ b/1.ＨTML/4.表格.html
@@ -7,7 +7,7 @@
 <body>
 <!--表格由<table>标签进行定义，<tr>标签定义表格行数，<td>标签定义单元格，
 <th>标签定义表格的表头，里面的文字自动加粗居中显示，<caption>定义表格标题 属性border定义边框
-    cellpadding:单元格与单元格中内容之间的空白，默认1像素
+    cellpadding:单元格与其内容之间的空白，默认1像素
     cellspacing:单元格与单元格之间的空白，默认2像素
 
     表格结构标签：thead和tbody分为头部区域和主体区域-->
