--- a/2.PC端CSS/9.CSS背景重复.html
+++ b/2.PC端CSS/9.CSS背景重复.html
@@ -12,6 +12,7 @@
 background符合写法：没有特定的顺序，一般为背景颜色、图片地址、背景平铺、背景图片滚动、背景图片位置
 
 background-image默认在水平和竖直方向上都重复图像
+background-size规定背景图像的尺寸
 background-repeat设置在水平（repeat-x）或者竖直方向上（repeat-y）重复
 或者仅显示一次（no-repeat）
 background-position：x y;指定背景图像的位置,
