--- a/2.PC端CSS/19CSS display.html
+++ b/2.PC端CSS/19CSS display.html
@@ -26,7 +26,10 @@
         visibility: hidden;
     }
     /*块级元素在浏览器小于元素宽度时会自动将水平滚动条添加到页面。
-      max-width可以解决这一问题,会自适应大小*/
+      max-width可以解决这一问题,会自适应大小
+      max-width:窗口宽度超过max-width就按照max-width宽度，如果窗口宽度小于max-width，就按照窗口宽度。
+
+   */
     #width{
         width:2000px;
         margin: auto;
