--- a/2.PC端CSS/22CSS浮动与清除.html
+++ b/2.PC端CSS/22CSS浮动与清除.html
@@ -14,7 +14,7 @@
       none:不浮动，原本在哪就在哪
       inherit:继承父级的float值*/
     #img1{
-        float: right;
+        float: left;
     }
     /*clear属性清除浮动，往往是在使用了float属性后使用
     none - 允许两侧都有浮动元素。默认值
