--- a/2.PC端CSS/40CSS 2D转换、3D转换.html
+++ b/2.PC端CSS/40CSS 2D转换、3D转换.html
@@ -30,7 +30,8 @@
         /* transform: matrix(0.5,0,0,0.5,0,0); */
     }
     div:hover{
-        transform: rotate(45deg);
+        transform: skew(20deg);
+        /* transform: translate(50px,100px) rotate(45deg); */
     }
 </style>
 <body>
