--- a/2.PC端CSS/24CSS浮动创建一个网站.html
+++ b/2.PC端CSS/24CSS浮动创建一个网站.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>简易网站</title>
 </head>
+<!-- 当父元素没设置足够大小的时候，而子元素设置了浮动的属性，子元素就会跳出父元素的边界（脱离文档流），当父元素没有给定高度时，并且父元素中又没有其它非浮动的元素时，父盒子的高度就会直接塌陷为零， 我们称这是高度塌陷 -->
 <!--dispaly属性：inline-block
     与inline属性相比允许元素设置高度和宽度
     与block属性相比，元素不会添加换行符，因此该元素可以位于其它元素旁边-->
