--- a/2.PC端CSS/39CSS文本效果.html
+++ b/2.PC端CSS/39CSS文本效果.html
@@ -16,8 +16,7 @@ normal(浏览器默认换行规则) break-all(允许在单词内换行) keep-all
     (5)word-wrap:允许长单词被打断并换到下一行
 normal(只在允许的断字点换行,浏览器默认处理) break-word(在长单词或 URL 地址内部进行换行)
     (6)writing-mode:指定文本行是水平放置还是垂直放置
-horizontal-tb(让内容从左到右水平流动，从上到下垂直流动) vertical-rl(让内容从上到下垂直流动，从右到左水平流动)
-vertical lr(相反)-->
+horizontal-tb(让内容从左到右水平流动，从上到下垂直流动) vertical-rl(让内容从上到下垂直流动，从右到左水平流动) vertical lr(相反)-->
 <style>
     .div1{
         border: 1px solid black;
